--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -13,18 +13,18 @@ grapl-observe = { path = "../../grapl-observe", version="*" }
 graph-generator-lib = { path="../graph-generator-lib", version="*" }
 
 sqs-lambda = { path = "../../sqs-lambda/" }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-failure = "0.1.*"
-log = "0.4.3"
-regex = "1.3.9"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+failure = "0.1"
+log = "0.4"
+regex = "1"
 
 rusoto_s3 = {version="0.45.0", default_features = false, features=["rustls"]}
 rusoto_core = {version="0.45.0", default_features = false, features=["rustls"]}
 rusoto_sqs = {version="0.45.0", default_features = false, features=["rustls"]}
 
-lambda_runtime = "0.2.*"
-async-trait = "0.1.31"
-zstd = "0.5.1"
-tokio-compat = "0.1.*"
-tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded", "fs"] }
+lambda_runtime = "0.2"
+async-trait = "0.1"
+zstd = "0.6"
+tokio-compat = "0.1"
+tokio = { version = "0.2", features = ["sync", "rt-core", "macros", "time", "rt-threaded", "fs"] }
