--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -10,38 +10,34 @@ grapl-config = {path = "../../grapl-config", version="*"}
 grapl-observe = {path = "../../grapl-observe", version="*"}
 
 sqs-lambda = { path = "../../sqs-lambda/" }
-serde = "1.0.110"
-serde_json = "1.0.53"
-serde_derive = "1.0.110"
-failure = "0.1.*"
-prost = "0.6.*"
-log = "0.4.3"
-base16 = "0.1.1"
-regex = "1.1.0"
-lazy_static = "1.2.0"
+serde = "1"
+serde_json = "1"
+serde_derive = "1"
+failure = "0.1"
+prost = "0.7"
+log = "0.4"
+regex = "1"
+lazy_static = "1.4"
 sysmon = "0.2"
-chrono = "0.4.6"
-rayon = "1.0.3"
-stopwatch = "0.0.7"
+chrono = "0.4"
+stopwatch = "0"
 
 rusoto_s3 = {version="0.45.0", default_features = false, features=["rustls"]}
 rusoto_core = {version="0.45.0", default_features = false, features=["rustls"]}
 rusoto_sqs = {version="0.45.0", default_features = false, features=["rustls"]}
 rusoto_credential = "0.45.0"
-futures = "0.3.*"
-aws_lambda_events = "0.2.0"
+futures = "0.3"
+aws_lambda_events = "0.4"
 
-simple_logger = "1.6.*"
-lambda_runtime = "0.2.*"
-async-trait = "0.1.31"
-zstd = "0.5.1"
-tokio-compat = "0.1.*"
-tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
-graph-generator-lib = { path="../graph-generator-lib", version="*"}
-tracing = "0.1.15"
-tracing-subscriber = "0.2.5"
-tracing-futures = "0.2.4"
-
+lambda_runtime = "0.2"
+async-trait = "0.1"
+zstd = "0.6"
+tokio-compat = "0.1"
+tokio = { version = "0.2", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+graph-generator-lib = { path="../graph-generator-lib" }
+tracing = "0.1"
+tracing-subscriber = "0.2"
+tracing-futures = "0.2"
 
 [dependencies.uuid]
 version = "*"
