--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -8,42 +8,37 @@ edition = "2018"
 grapl-graph-descriptions = { path="../graph-descriptions", version="*"}
 grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path="../grapl-observe", version="*"}
-anyhow = "1.0.*"
-failure = "0.1.*"
-serde = "1.0.110"
-serde_json = "1.0.53"
-serde_derive = "1.0.110"
-log = "0.4.*"
+anyhow = "1"
+failure = "0.1"
+serde = "1"
+serde_json = "1"
+serde_derive = "1"
+log = "0.4"
 
 dgraph-tonic = { version = "0.8", features = ["dgraph-1-1"] }
-grpc = "0.6.1"
-sqs-lambda = { path = "../sqs-lambda/" }
+sqs-lambda = { path = "../sqs-lambda" }
 
 rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_sns = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_dynamodb = { version="0.45", default_features = false, features=["rustls"] }
+rusoto_credential = "0.45"
 
-lambda_runtime = "0.2.*"
-aws_lambda_events = "0.2.0"
+lambda_runtime = "0.2"
+aws_lambda_events = "0.4"
 
-simple_logger = "1.6.*"
-stopwatch = "0.0.7"
-sha2 = "0.8.0"
+stopwatch = "0"
+sha2 = "0"
 
-zstd = "0.5.1"
-base16 = "0.1.1"
-prost = "0.6.*"
-base64 = "0.10.1"
-rand = "0.6.5"
-itertools = "0.8.0"
+zstd = "0.6"
+prost = "0.7"
+base64 = "0"
+rand = "0"
 
-futures = "0.3.*"
-async-trait = "0.1.30"
-uuid = "0.8.1"
-tokio-compat = "0.1.*"
-tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
-chrono = "0.4.11"
-rusoto_credential = "0.45.0"
-rusoto_dynamodb = {version="0.45.0", default_features = false, features=["rustls"]}
-serde_dynamodb = {version="0.6", default_features = false, features=["rustls"]}
+futures = "0.3"
+async-trait = "0.1"
+uuid = "0"
+tokio-compat = "0"
+tokio = { version = "0.2", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+chrono = "0.4"
+serde_dynamodb = { version="0.6", default_features = false, features=["rustls"] }
