--- a/etc/local_grapl/nginx.conf
+++ b/etc/local_grapl/nginx.conf
@@ -20,11 +20,11 @@ http {
         }
 
         location /graphQlEndpoint/ {
-            proxy_pass http://graphql_endpoint:5000$uri;
+            proxy_pass http://graphql_endpoint:5000/graphQlEndpoint/;
         }
 
         location /prod/graphQlEndpoint/ {
-            proxy_pass http://graphql_endpoint:5000$uri;
+            proxy_pass http://graphql_endpoint:5000/graphQlEndpoint/;
         }
 
         location /modelPluginDeployer/ {
