Fixed metric forwarder unit tests

--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -11,6 +11,8 @@ aws_lambda_events = "0.4"
 base64 = "0.13"
 chrono = "0.4"
 flate2 = "1"
+hmap = "0.1"
+itertools = "0"
 futures = "0.3"
 lambda_runtime = "0.2"
 log = "0.4"
