--- a/src/rust/sqs-lambda/Cargo.toml
+++ b/src/rust/sqs-lambda/Cargo.toml
@@ -9,41 +9,39 @@ license = "MIT"
 
 [dependencies]
 grapl-observe = {path = "../grapl-observe"}
-rusoto_core = {version = "^0", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "^0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version = "^0", default_features = false, features=["rustls"]}
 
-futures = {version="0.3", features=["compat"]}
+rusoto_core = {version = "0.45", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.45", default_features = false, features=["rustls"]}
+rusoto_sqs = {version = "0.45", default_features = false, features=["rustls"]}
 
-tokio = { version = "0.2", features = ["io-util", "sync", "rt-core", "macros", "time", "rt-threaded"] }
+aws_lambda_events = "0.4"
+zstd = "0.6"
+futures = { version = "0.3", features=["compat"] }
+
+tokio = { version = "0.2", features = ["io-util", "sync", "macros", "time"] }
 async-trait = "0.1"
-aws_lambda_events = "0.2.5"
-serde = "1.0"
-serde_json = "1.0"
-prost = "0.6.*"
-zstd = "0.5.1"
-lambda_runtime = "0.2.1"
+serde = "1"
+serde_json = "1"
+prost = "0.7"
+lambda_runtime = "0"
 
-uuid = { version = "0.8.1", features = ["v4"] }
-log = "0.4.8"
-futures-retry = "0.3.3"
-rand = "0.7.2"
-rand_xorshift = "0.2.0"
-hex = "0.4.0"
-darkredis = "0.5.2"
-num_cpus = "1.11.1"
-aktors = "0.2.6"
-derive-aktor = "0.1.4"
+uuid = { version = "0", features = ["v4"] }
+log = "0"
+futures-retry = "0"
+rand = "0"
+rand_xorshift = "0"
+hex = "0"
+darkredis = "0"
+num_cpus = "1"
 
+aktors = "0"
+derive-aktor = "0"
 
-notify = "5.0.0-pre.2"
-crossbeam-channel = "0.4.2"
-simple_logger = "1.6.0"
-chrono = "0.4.11"
-tracing = "0.1.13"
-tracing-subscriber = "0.2.5"
-tracing-futures = "0.2.4"
+chrono = "0"
+tracing = "0"
+tracing-subscriber = "0"
+tracing-futures = "0"
 
-eyre = "0.4"
-color-eyre = "0.3"
-thiserror = "1.0.19"
+eyre = "0"
+color-eyre = "0"
+thiserror = "1"
