readd removed logging driver none thing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,8 @@ services:
       default:
         aliases:
           - minio
+    logging:	
+      driver: none	
 
   dynamodb:
     image: amazon/dynamodb-local
