--- a/docker-compose.Makefile.yml
+++ b/docker-compose.Makefile.yml
@@ -101,8 +101,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: metric-forwarder-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
@@ -119,8 +118,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: sysmon-subgraph-generator-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
@@ -148,8 +146,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: osquery-subgraph-generator-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
@@ -177,8 +174,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: node-identifier-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -218,8 +214,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: node-identifier-retry-handler-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -259,8 +254,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: graph-merger-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -293,8 +287,7 @@ services:
       dockerfile: Dockerfile.Makefile
       target: analyzer-dispatcher-deploy
       args:
-        - SCCACHE_LOCATION=${SCCACHE_LOCATION:-container}
-        - SCCACHE_BUCKET=${SCCACHE_BUCKET}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
