--- a/src/python/python_test_deps/requirements.txt
+++ b/src/python/python_test_deps/requirements.txt
@@ -1,7 +1,7 @@
-pytest
-pytest-xdist
-hypothesis
+pytest==6.2.1
+pytest-xdist==2.2.0
+hypothesis==6.0.2
 
-mypy
-pytype
-boto3-stubs[essential,sagemaker]
+mypy==0.790
+pytype==2021.1.14
+boto3-stubs[essential,sagemaker]==1.16.54.0
