--- a/src/rust/.cargo/config.toml
+++ b/src/rust/.cargo/config.toml
@@ -11,7 +11,7 @@
 rustflags = [
     "--deny=dead_code",
     "--deny=non_snake_case",
-    "--allow=unused_imports",
+    "--deny=unused_imports",
     "--deny=unused_mut",
     "--deny=unused_variables"
 ]
