Deny unused variables
Fixes two cases of unused variables, and causes future unused
variables to halt the build.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/rust/.cargo/config.toml
+++ b/src/rust/.cargo/config.toml
@@ -13,5 +13,5 @@ rustflags = [
     "--deny=non_snake_case",
     "--allow=unused_imports",
     "--deny=unused_mut",
-    "--allow=unused_variables"
+    "--deny=unused_variables"
 ]
