Deny unused mutable variables
Fixes a single unnecessary `mut` declaration, and causes future
violations to halt the build.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/rust/.cargo/config.toml
+++ b/src/rust/.cargo/config.toml
@@ -12,6 +12,6 @@ rustflags = [
     "--deny=dead_code",
     "--deny=non_snake_case",
     "--allow=unused_imports",
-    "--allow=unused_mut",
+    "--deny=unused_mut",
     "--allow=unused_variables"
 ]
