Deny non-snake case names
It seems we didn't actually have any violations of this lint after
all. We'll just deny them so future violations halt the build.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/rust/.cargo/config.toml
+++ b/src/rust/.cargo/config.toml
@@ -10,7 +10,7 @@
 # `--deny=warnings`.
 rustflags = [
     "--deny=dead_code",
-    "--allow=non_snake_case",
+    "--deny=non_snake_case",
     "--allow=unused_imports",
     "--allow=unused_mut",
     "--allow=unused_variables"
