--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -291,6 +291,7 @@ services:
     image: grapl/grapl-analyzer-executor:${TAG:-latest}
     command: /bin/sh -c '. venv/bin/activate && python3 analyzer_executor/src/run_local.py'
     environment:
+      - DEBUG_SERVICES=${DEBUG_SERVICES}
       - "HITCACHE_ADDR=dev-shared-redis"
       - "HITCACHE_PORT=6379"
       - "MESSAGECACHE_ADDR=dev-shared-redis"
@@ -317,6 +318,8 @@ services:
       - sqs:127.0.0.1
       - amazonaws:127.0.0.1
       - minio:127.0.0.1
+    ports:
+      - 8401:8401  # VSC Debugger
 
   grapl-engagement-creator:
     image: grapl/grapl-engagement-creator:${TAG:-latest}
