--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -6,31 +6,18 @@ edition = "2018"
 
 [dependencies]
 grapl-graph-descriptions = { path="../graph-descriptions", version="*" }
-<<<<<<< HEAD
 grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path = "../grapl-observe"}
 grapl-service = {path="../grapl-service"}
 aws_lambda_events = "0.2.1"
-base64 = "0.10.1"
 base16 = "0.1.1"
-bytes = "0.5.*"
 dgraph-rs = "0.1.2"
-failure = "0.1.*"
 futures = "0.3.*"
 grpc = "0.6.1"
-log = "0.4.6"
-prost = "0.6.*"
-=======
-grapl-config = { path="../grapl-config", version="*" }
-grapl-observe = { path = "../grapl-observe" }
-sqs-lambda = { path = "../sqs-lambda/" }
->>>>>>> staging
 
-aws_lambda_events = "0"
 base64 = "0.13"
 bytes = "1"
 failure = "0.1"
-futures = "0"
 log = "0.4"
 prost = "0.7"
 
@@ -39,30 +26,16 @@ rusoto_core = { version="0.45", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.45", default_features = false, features=["rustls"] }
 rusoto_credential = "0.45"
 
-<<<<<<< HEAD
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
-zstd = "0.5.1"
+zstd = "0.6"
 tokio-compat = "0.1.*"
 tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 chrono = "0.4.11"
-rusoto_credential = "0.45.0"
 sqs-executor = { path = "../sqs-executor/" }
 thiserror = "1.0.23"
-=======
-serde = "1"
-serde_json = "1"
-serde_derive = "1"
-sha2 = "0.9"
-stopwatch = "0"
-
-lambda_runtime = "0"
-async-trait = "0"
-zstd = "0.6"
-tokio-compat = "0.1"
-tokio = { version = "0.2", features = ["sync", "macros", "time", "rt-threaded"] }
-chrono = "0"
->>>>>>> staging
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.61"
 
 [dependencies.uuid]
 version = "*"
