--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -9,16 +9,16 @@ edition = "2018"
 [dependencies]
 grapl-observe = {path = "../grapl-observe"}
 
-rusoto_core = {version = "^0", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "^0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version = "^0", default_features = false, features=["rustls"]}
+rusoto_core = {version = "0.45", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.45", default_features = false, features=["rustls"]}
+rusoto_sqs = {version = "0.45", default_features = false, features=["rustls"]}
 
 tokio = { version = "0.2", features = ["io-util", "sync", "rt-core", "macros", "time", "rt-threaded"] }
 
 serde = "1.0"
 serde_json = "1.0"
-prost = "0.6.*"
-zstd = "0.5.1"
+prost = "0.7"
+zstd = "0.6"
 eyre = "0.6.3"
 color-eyre = "0.5.10"
 thiserror = "1.0.22"
