--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "26.0.x",
     "@types/node": "14.14.x",
     "@types/uuid": "8.3.x",
+    "eslint": "^7.18.0",
     "jest": "26.6.x",
     "ts-jest": "26.4.x",
     "ts-node": "9.0.x",
